nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: a99a27eff13d04c379ada5594c365f70-446345079.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /fastapi
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            namespace: model-serving
            port:
              number: 80
  - host: a99a27eff13d04c379ada5594c365f70-446345079.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            namespace: monitoring
            port:
              number: 80
  - host: a99a27eff13d04c379ada5594c365f70-446345079.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            namespace: monitoring
            port:
              number: 80
